[gd_scene load_steps=4 format=2]

[ext_resource path="res://fonts/square.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://ui/BriefText.gd" type="Script" id=2]

[sub_resource type="DynamicFont" id=1]
size = 8
font_data = ExtResource( 1 )

[node name="BriefText" type="Control"]
anchor_right = 0.104
anchor_bottom = 0.062
margin_right = 0.0639992
margin_bottom = 0.0639997
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Text" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -16.0
margin_top = -4.0
margin_right = 16.0
margin_bottom = 4.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "MISS"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Tween" type="Tween" parent="."]

[node name="Timer" type="Timer" parent="."]
one_shot = true
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]
[connection signal="timeout" from="Timer" to="." method="_on_Timer_timeout"]
